# research_agent

./: .gitignore  README.md  docker-compose.yml  docker-start.sh  env.example  instructions.md  results.md  test1.md
backend/: .dockerignore  Dockerfile  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/app/: agent.py  batch_processor.py  crud.py  db.py  enhanced_research_agent.py  gemini_helpers.py  live_research_session.py  main.py  models.py  schemas.py  summarization_pipeline.py  tasks.py  utils.py
backend/tests/: debug_content.py  test_agent_logic.py  test_api_endpoints.py  test_arxiv.py  test_fix.py  test_gemini_integration.py  test_improved_search.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/__tests__/: ResearchForm.test.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/app/batch-research/: page.tsx
frontend/src/app/live-research/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/research/[jobId]/: page.tsx
frontend/src/app/research/history/: page.tsx
frontend/src/components/: BatchLiveResearch.tsx  ProgressTrackng.tsx  ResearchForm.tsx  ResultDisplay.tsx  StatusDisplay.tsx
frontend/src/components/ui/: input.tsx  select.tsx  toast.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
mdfiles/: DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT.md  FRONTEND_UPDATE_SUMMARY.md  GEMINI_SETUP.md  NEW_GENAI_SDK_GUIDE.md
